--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "lodash.clonedeep": "^4.5.0",
     "node-sass": "^7.0.1",
     "polished": "^4.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-popper": "^2.2.5",
+    "react-query": "^3.38.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.2",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
